src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/InvalidRefSchema.liquid
{% validate "Schemas/InvalidTestSchema.schema.json" -%}
{
    "resourceType": "{{ msg.resourceType }}",
    "id": "{{ msg.id }}"
}
{% endvalidate -%}
